--- a/src/_includes/sections/header.html
+++ b/src/_includes/sections/header.html
@@ -5,11 +5,11 @@
 <header id="cs-navigation">
     <div class="cs-container">
         <!--Nav Logo-->
-        <a href="/" class="cs-logo" aria-label="Company Name Home page">
-            <img src="/assets/svgs/logo-black.svg" alt="" width="210" height="29" aria-hidden="true" decoding="async">
+        <a href="/" class="cs-logo" aria-label="KhemsAutoCare">
+            <img src="/assets/images/logo.png" alt="" width="210" height="29" aria-hidden="true" decoding="async">
         </a>
         <!--Navigation List-->
-        <nav class="cs-nav" aria-label="main navigation">
+        <div><nav class="cs-nav" aria-label="main navigation">
             <!--Mobile Nav Toggle-->
             <button class="cs-toggle" id="cs-toggle" aria-expanded="false" aria-controls="cs-ul-wrapper" aria-label="mobile menu toggle" aria-haspopup="menu">
                 <span class="cs-box" aria-hidden="true">
@@ -27,13 +27,18 @@
                         </a>
                     </li>
                     <li class="cs-li">
+                        <a href="/services" class="cs-li-link {% if page.url == "/services/" %} cs-active {% endif %}" {% if page.url == "/services/" %} aria-current="page" {% endif %}>
+                            Services
+                        </a>
+                    </li>
+                    <li class="cs-li">
                         <a href="/about/" class="cs-li-link {% if page.url == "/about/" %} cs-active {% endif %}" {% if page.url == "/about/" %} aria-current="page" {% endif %}>
                             About
                         </a>
                     </li>
                     <!-- Note: When copying this dropdown, update the id attribute with an appropriate name (e.g., "services-dropdown-toggle", "products-dropdown-toggle") and ensure the aria-labelledby attribute on the ul matches the button's id -->
                     <!--Copy and paste this cs-dropdown list item and replace any .cs-li with this cs-dropdown group to make a new dropdown and it will work-->
-                    <li class="cs-li cs-dropdown">
+                    <!-- <li class="cs-li cs-dropdown">
                         <button class="cs-li-link cs-dropdown-toggle {% if page.url == "/project-one/" or page.url == "/project-two/" %} cs-active {% endif %}" aria-haspopup="menu" aria-expanded="false" id="projects-dropdown-toggle">
                             Projects
                             <img class="cs-drop-icon" src="/assets/svgs/dropdown.svg" alt="" width="15" height="15" decoding="async" aria-hidden="true">
@@ -46,18 +51,18 @@
                                 <a href="/project-two/" class="cs-li-link cs-drop-link">Project Two</a>
                             </li>
                         </ul>
-                    </li>
+                    </li> -->
                     <li class="cs-li">
                         <a href="/reviews/" class="cs-li-link {% if page.url == "/reviews/" %} cs-active {% endif %}" {% if page.url == "/reviews/" %} aria-current="page" {% endif %}>
                             Reviews
                         </a>
                     </li>
-                    <li class="cs-li">
+                    <!-- <li class="cs-li">
                         <a href="/blog/" class="cs-li-link {% if page.url == "/blog/" %} cs-active {% endif %}" {% if page.url == "/blog/" %} aria-current="page" {% endif %}>
                             Blog
                         </a>
                     </li>
-                    <li class="cs-li cs-hide-on-desktop">
+                    <li class="cs-li cs-hide-on-desktop"> -->
                         <a href="/contact/" class="cs-li-link {% if page.url == "/contact/" %} cs-active {% endif %}" {% if page.url == "/contact/" %} aria-current="page" {% endif %}>
                             Contact
                         </a>
@@ -65,11 +70,13 @@
                 </ul>
             </div>
         </nav>
-        <a href="/contact/" class="cs-button-solid cs-nav-button">Contact Us</a>
+        </div>
+        <div><a href="/contact/" class="cs-button-solid cs-nav-button">Contact Us</a></div>
         <!--Dark Mode toggle, uncomment button code if you want to enable a dark mode toggle-->
-        <button id="dark-mode-toggle" aria-label="dark mode toggle" aria-pressed="false">
+        <div><button id="dark-mode-toggle" aria-label="dark mode toggle" aria-pressed="false">
             <img class="cs-moon" aria-hidden="true" src="/assets/svgs/moon.svg" decoding="async" alt="" width="15" height="15">
             <img class="cs-sun" aria-hidden="true" src="/assets/svgs/sun.svg" decoding="async" alt="" width="15" height="15">
         </button>
+        </div>
     </div>
 </header>
