--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -7,16 +7,16 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="{{ description }}">
+        <meta name="description" content="KhemsAutoCare is a professional car detailing business in Jamaica, NY offering expert interior, exterior, and engine detailing with premium products.">
         <link rel="canonical" href="{{ client.domain }}{{ page.url }}">
         <meta name="generator" content="{{ eleventy.generator }}">
 
         <!--Social Media Display-->
-        <meta property="og:title" content="{{ title }}"/>
-        <meta property="og:description" content="{{ description }}"/>
+        <meta property="og:title" content="KhemsAutoCare"/>
+        <meta property="og:description" content="KhemsAutoCare is a professional car detailing business in Jamaica, NY offering expert interior, exterior, and engine detailing with premium products."/>
         <meta property="og:type" content="website"/>
         <meta property="og:url" content="{{ client.domain }}{{ page.url }}"/>
-        <meta property="og:image" content="{{ image or "/assets/images/logo-small.png" }}"/>
+        <meta property="og:image" content="{{ image or "/assets/images/khem-meta.png" }}"/>
         <meta property="og:image:secure_url" content="{{ image or "/assets/images/logo-small.png" }}"/>
 
         <!--Favicons-->
