added meta image and tag

--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -12,7 +12,7 @@
         <meta name="generator" content="{{ eleventy.generator }}">
 
         <!--Social Media Display-->
-        <meta property="og:title" content="KhemsAutoCare"/>
+        <meta property="og:title" content="KhemsAutoCare | Car Detailing Services"/>
         <meta property="og:description" content="KhemsAutoCare is a professional car detailing business in Jamaica, NY offering expert interior, exterior, and engine detailing with premium products."/>
         <meta property="og:type" content="website"/>
         <meta property="og:url" content="{{ client.domain }}{{ page.url }}"/>
