--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -16,8 +16,8 @@
         <meta property="og:description" content="KhemsAutoCare is a professional car detailing business in Jamaica, NY offering expert interior, exterior, and engine detailing with premium products."/>
         <meta property="og:type" content="website"/>
         <meta property="og:url" content="{{ client.domain }}{{ page.url }}"/>
-        <meta property="og:image" content="{{ image or "/assets/images/khem-meta.png" }}"/>
-        <meta property="og:image:secure_url" content="{{ image or "/assets/images/khem-meta.png" }}"/>
+        <meta property="og:image" content="assets/images/khem-meta.png"/>
+        <meta property="og:image:secure_url" content="/assets/images/khem-meta.png"/>
 
         <!--Favicons-->
         <!-- https://realfavicongenerator.net/ -->
