--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -16,8 +16,8 @@
         <meta property="og:description" content="KhemsAutoCare is a professional car detailing business in Jamaica, NY offering expert interior, exterior, and engine detailing with premium products."/>
         <meta property="og:type" content="website"/>
         <meta property="og:url" content="{{ client.domain }}{{ page.url }}"/>
-        <meta property="og:image" content="https://khemsautocare.com/assets/images/khem-meta.png"/>
-        <meta property="og:image:secure_url" content="https://khemsautocare.com/assets/images/khem-meta.png"/>
+        <meta property="og:image" content="{{ client.domain }}/assets/images/khem-meta.png"/>
+        <meta property="og:image:secure_url" content="{{ client.domain }}/assets/images/khem-meta.png"/>
         <meta property="og:image:width" content="1200"/>
         <meta property="og:image:height" content="630"/>
 
