--- a/src/_includes/sections/header.html
+++ b/src/_includes/sections/header.html
@@ -63,7 +63,7 @@
                         </a>
                     </li>
                     <li class="cs-li cs-hide-on-desktop"> -->
-                        <a href="/contact/" class="cs-li-link {% if page.url == "/contact/" %} cs-active {% endif %}" {% if page.url == "/contact/" %} aria-current="page" {% endif %}>
+                        <a href="/contact/" class="cs-hide-on-desktop cs-li-link {% if page.url == "/contact/" %} cs-active {% endif %}" {% if page.url == "/contact/" %} aria-current="page" {% endif %}>
                             Contact
                         </a>
                     </li>
