--- a/src/_includes/sections/cta.html
+++ b/src/_includes/sections/cta.html
@@ -10,7 +10,7 @@
             <p class="cs-text">
                 Khem's Auto Care provides professional mobile car detailing services that bring your vehicle back to life. We focus on every detail, inside and out, to ensure your car looks and feels spotless.
             </p>
-            <a href="/contact/" class="cs-button-solid">Request A Free Quote</a>
+            <a href="/contact/" class="cs-button-solid">Contact Us</a>
         </div>
     </div>
     <!-- Background Image-->
