--- a/src/assets/sass/local.scss
+++ b/src/assets/sass/local.scss
@@ -394,7 +394,7 @@
             flex-direction: column;
             align-items: center;
             /* 48px - 64px */
-            gap: clamp(3rem, 6vw, 4rem);
+            gap: 0;
         }
 
         .cs-content {
@@ -413,7 +413,7 @@
             display: flex;
             flex-direction: column;
             column-gap: calc(20 / 16 * 1rem);
-            row-gap: calc(64 / 16 * 1rem);
+            row-gap: 0rem;
         }
 
         .cs-item {
