--- a/src/_includes/sections/footer.html
+++ b/src/_includes/sections/footer.html
@@ -69,4 +69,6 @@ At KhemsAutoCare, we provide expert auto detailing and maintenance services to k
             </li>
         </ul>
     </div>
+    
 </footer>
+    <div class="credits"><p>Website built by <a href="https://gredta.github.io">Greta Belegu</a></p></div>
