open in new tab

--- a/src/_includes/sections/footer.html
+++ b/src/_includes/sections/footer.html
@@ -71,4 +71,4 @@ At KhemsAutoCare, we provide expert auto detailing and maintenance services to k
     </div>
     
 </footer>
-    <div class="credits"><p>Website built by <a href="https://gredta.github.io">Greta Belegu</a></p></div>
+    <div class="credits"><p>Website built by <a target="_blank" href="https://gredta.github.io">Greta Belegu</a></p></div>
